// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SHero Snapshot Tests > renders with custom all props correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl">Custom Hero</h1>
          <p class="text-muted-foreground mb-8 max-w-2xl lg:text-xl">Amazing subheadline</p>
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SHero Snapshot Tests > renders with default props correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl"></h1>
          <!--v-if-->
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <div>
              <!-- <SearchBar /> -->
            </div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if-->Primary Button
              <!--v-if-->
            </button><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 ring ring-inset ring-primary/50 text-primary hover:bg-primary/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus:outline-none focus-visible:ring-2 focus-visible:ring-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if--> Buying Advice
              <!--v-if-->
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SHero Snapshot Tests > renders with headline and subheadline correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl">Hello World</h1>
          <p class="text-muted-foreground mb-8 max-w-2xl lg:text-xl">This is a subheadline.</p>
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <div>
              <!-- <SearchBar /> -->
            </div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if-->Primary Button
              <!--v-if-->
            </button><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 ring ring-inset ring-primary/50 text-primary hover:bg-primary/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus:outline-none focus-visible:ring-2 focus-visible:ring-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if--> Buying Advice
              <!--v-if-->
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SHero Snapshot Tests > renders with headline only correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl">Welcome to Our Site</h1>
          <!--v-if-->
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <div>
              <!-- <SearchBar /> -->
            </div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if-->Primary Button
              <!--v-if-->
            </button><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 ring ring-inset ring-primary/50 text-primary hover:bg-primary/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus:outline-none focus-visible:ring-2 focus-visible:ring-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if--> Buying Advice
              <!--v-if-->
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SHero Snapshot Tests > renders without buttons correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl">No Buttons</h1>
          <!--v-if-->
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <div>
              <!-- <SearchBar /> -->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`SHero Snapshot Tests > renders without search bar correctly 1`] = `
"<div>
  <div class="py-20">
    <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8">
      <div class="items-center">
        <div class="flex flex-col items-center text-center lg:items-start lg:text-left">
          <h1 class="my-4 text-2xl font-bold text-pretty lg:text-5xl">No Search</h1>
          <!--v-if-->
          <div class="flex w-full flex-col justify-center gap-2 sm:flex-row lg:justify-start">
            <!--v-if--><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 text-inverted bg-primary hover:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if-->Primary Button
              <!--v-if-->
            </button><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 gap-1.5 ring ring-inset ring-primary/50 text-primary hover:bg-primary/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent focus:outline-none focus-visible:ring-2 focus-visible:ring-primary w-full cursor-pointer rounded-none text-lg sm:w-auto">
              <!--v-if--> Buying Advice
              <!--v-if-->
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
